tests/ui/consts/const-eval/issue-104390.stderr
error: expected at least one digit in exponent
  --> $DIR/issue-104390.rs:1:27
   |
LL | fn f1() -> impl Sized { & 2E }
   |                           ^^

error: expected at least one digit in exponent
  --> $DIR/issue-104390.rs:2:28
   |
LL | fn f2() -> impl Sized { && 2E }
   |                            ^^

error: expected at least one digit in exponent
  --> $DIR/issue-104390.rs:3:29
   |
LL | fn f3() -> impl Sized { &'a 2E }
   |                             ^^

error: expected at least one digit in exponent
  --> $DIR/issue-104390.rs:5:34
   |
LL | fn f4() -> impl Sized { &'static 2E }
   |                                  ^^

error: expected at least one digit in exponent
  --> $DIR/issue-104390.rs:7:28
   |
LL | fn f5() -> impl Sized { *& 2E }
   |                            ^^

error: expected at least one digit in exponent
  --> $DIR/issue-104390.rs:8:29
   |
LL | fn f6() -> impl Sized { &'_ 2E }
   |                             ^^

error: borrow expressions cannot be annotated with lifetimes
  --> $DIR/issue-104390.rs:3:25
   |
LL | fn f3() -> impl Sized { &'a 2E }
   |                         ^---^^
   |                          |
   |                          annotated with lifetime here
   |
help: remove the lifetime annotation
   |
LL - fn f3() -> impl Sized { &'a 2E }
LL + fn f3() -> impl Sized { &2E }
   |

error: borrow expressions cannot be annotated with lifetimes
  --> $DIR/issue-104390.rs:5:25
   |
LL | fn f4() -> impl Sized { &'static 2E }
   |                         ^--------^^
   |                          |
   |                          annotated with lifetime here
   |
help: remove the lifetime annotation
   |
LL - fn f4() -> impl Sized { &'static 2E }
LL + fn f4() -> impl Sized { &2E }
   |

error: borrow expressions cannot be annotated with lifetimes
  --> $DIR/issue-104390.rs:8:25
   |
LL | fn f6() -> impl Sized { &'_ 2E }
   |                         ^---^^
   |                          |
   |                          annotated with lifetime here
   |
help: remove the lifetime annotation
   |
LL - fn f6() -> impl Sized { &'_ 2E }
LL + fn f6() -> impl Sized { &2E }
   |

error: aborting due to 9 previous errors

